[package]
name = "flat-drop"
version = "0.1.0"
edition = "2021"

authors = ["zeramorphic"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeramorphic/flat-drop"
description = """
Wrapper that drops recursive objects iteratively to avoid stack overflows.
"""
readme = "README.md"
keywords = ["drop", "recursive", "E0509"]
categories = ["rust-patterns", "memory-management"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }
